Add a better README.

--- a/example/djoauth2example/oauth2server/templates/oauth2server/authorization_page.html
+++ b/example/djoauth2example/oauth2server/templates/oauth2server/authorization_page.html
@@ -1,5 +1,5 @@
 {% if client.image_url %}
-<img src="{{client.image_url}}" style="width: 200px; height: 200px; border: 1px solid black; margin: 10px;">
+  <img src="{{client.image_url}}">
 {% endif %}
 
 <p>{{client.name}} is requesting access to the following scopes:</p>
